--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Pasta de dente - R$ 4,19 (90g)</p>
         </div>
         <div>
-            <img src="img/pasta_de_dente.jpeg" alt="Papel higiênico">
+            <img src="img/papel_higienico.jpeg" alt="Papel higiênico">
             <p>Papel higiênico folha dupla - R$ 6,99 (4 rolos)</p>
         </div>
     </section>
